fixed spacing and background irregularies

--- a/src/components/AboutMe/about.css
+++ b/src/components/AboutMe/about.css
@@ -9,10 +9,5 @@
 }
 
 #headshot {
-  max-height: 100%;
-  max-width: auto;
-}
-
-#about-me {
-  max-width: 100%;
+  max-width: 60%;
 }
